--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
       </div>
 
         <script src="your_javascript_here.js"></script>
-        <!-- <script src="tests.js"></script> -->
+        <script src="tests.js"></script>
     </body>
 </html>
